objects/Sales_Coach_Section__c.object
<CustomObject>
    <description>This is the administration tool for the Sales Coach</description>
    <fields>
        <fullName>Sales_Coach_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Coach Stage</label>
        <referenceTo>Sales_Coach_Stage__c</referenceTo>
        <relationshipLabel>Sales Coach Sections</relationshipLabel>
        <relationshipName>Sales_Coach_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Ordering__c</fullName>
        <label>Section Ordering</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Width__c</fullName>
        <label>Section Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Sales Coach Section</label>
    <nameField>
        <displayFormat>SCS-{0000}</displayFormat>
        <label>Sales Coach Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Coach Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>